--- a/portfoliotask2.ipynb
+++ b/portfoliotask2.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wood_df = pd.read_csv('wood_prices_dataset.csv')"
+    "wood_df = pd.read_csv('wood.csv')"
    ]
   },
   {
